style.css
:root {
  --yellow: #EEBF63;
  --grey_line: #E1E1E1;
  --grey_light: #828282;
  --grey_bg: #E9E9E9;
  --black: #151517;
  --white: #F1F1F1;
  --green_light: #8ED2A9;
  --blue_light: #6FC2C5;
  --blue_bg: #90C0E8;
}

html,
body {
  background: var(--white);
  font-family: Poppins;
  font-style: normal;
  width: 100%;
}

html a:link,
html a:visited,
html a:hover,
html a:active,
body a:link,
body a:visited,
body a:hover,
body a:active {
  text-decoration: none;
  color: var(--black);
}

.flexbox_container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.text_yellow {
  color: var(--yellow);
}

.text_grey {
  color: var(--grey_light);
}

/* Margin - m{l,t,b}_size, l:left,t:top,b:bottom */
.ml_10 {
  margin-left: 10px;
}

.mt_10 {
  margin-top: 10px;
}

.mt_20 {
  margin-top: 20px;
}

.mt_75 {
  margin-top: 75px;
}

.mb_20 {
  margin-bottom: 20px;
}

/* Font Size : fs_size */
.fs_14 {
  font-size: 14px;
}

.fs_16 {
  font-size: 16px;
}

.fs_18 {
  font-size: 18px;
}

.fs_24 {
  font-size: 24px;
}

.fs_36 {
  font-size: 36px;
}

.fs_48, .div_title,
.text_sm {
  font-size: 48px;
}

/* Line Height : lh_size */
.lh_24 {
  line-height: 24px;
}

.lh_30 {
  line-height: 30px;
}

.lh_36 {
  line-height: 36px;
}

.lh_46 {
  line-height: 46px;
}

.lh_62, .div_title,
.text_sm {
  line-height: 62px;
}

/* justify-content : space-between */
.justify_between {
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

/* image to fit to container */
.image_fit, .header .image_container img, .content_2 .projects .project_image img, .content_3 .card-image img, .content_5 img, .content_6 .profile .profile_image img {
  width: 100%;
  height: 100%;
  -o-object-fit: cover;
     object-fit: cover;
}

.large_text {
  font-size: 72px;
  line-height: 62px;
}

.text_overflow {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.text_black,
.navbar-right a {
  color: var(--black);
}

.navbar-brand {
  font-weight: bold;
  font-size: 22px;
  line-height: 33px;
}

.home_menu li a {
  font-weight: bold;
  font-size: 22px;
  line-height: 33px;
}

.home_menu li a.active {
  color: var(--yellow);
}

.home_menu li a:hover {
  background-color: transparent !important;
  color: var(--yellow);
}

.header .social_icons {
  width: 70%;
}

.header .btn_container {
  width: 85%;
}

.header .description_container {
  -webkit-box-align: start;
      -ms-flex-align: start;
          align-items: flex-start;
}

.header .navbar-header.flexbox_container {
  -webkit-box-flex: 61%;
      -ms-flex: 61%;
          flex: 61%;
}

.social_icons,
.btn_container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  margin: 27px 0 27px 0;
}

.btn_normal,
.btn_inverted {
  padding: 17px;
  border: 1px solid var(--yellow);
  border-radius: 10px;
  -webkit-box-pack: space-evenly;
      -ms-flex-pack: space-evenly;
          justify-content: space-evenly;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  cursor: pointer;
}

.btn_normal {
  background-color: var(--yellow);
  color: var(--white);
  width: 152px;
}

.btn_inverted {
  width: 184px;
}

.content_1 {
  background-color: var(--grey_bg);
  padding: 65px;
  border-radius: 45px;
}

.content_1 .image_container {
  background-image: url("images/home_image_2.png");
  background-position: center;
  background-repeat: no-repeat;
  width: 35%;
  height: 458px;
  border-radius: 30px;
}

.content_1 .content_1_right.flexbox_container {
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  width: 48%;
}

.content_1 .positive_review {
  margin-left: 38px;
}

.content_3 .card {
  background: transparent;
  border: none;
}

.content_4 {
  background-color: var(--yellow);
  border-radius: 25px;
  padding: 70px;
  color: var(--white);
}

.content_4 .btn_container {
  -webkit-box-pack: end;
      -ms-flex-pack: end;
          justify-content: flex-end;
  width: 70%;
}

.content_4 .btn_container .btn_normal {
  background-color: var(--white);
  color: var(--black);
  width: 213px;
}

.content_4 .btn_container .btn_inverted {
  width: 274px;
  border: 1px solid var(--white);
}

.content_6 {
  background-color: var(--blue_light);
  padding: 40px 20px 40px 20px;
}

.content_6 .testimonials.flexbox_container {
  -webkit-box-pack: space-evenly;
      -ms-flex-pack: space-evenly;
          justify-content: space-evenly;
}

.content_6 .border_curved {
  background-color: var(--white);
  border-radius: 20px 0 20px 20px;
  width: 46%;
  padding: 40px;
  height: 351px;
}

.content_6 .border_curved > p:first-child {
  height: 190px;
}

.content_6 .carousel-inner {
  padding-bottom: 70px;
}

.content_6 .carousel-inner .item {
  height: 351px;
}

.footer {
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

.footer .social_icons {
  width: 15%;
}

.footer .backtotop {
  width: unset;
  -webkit-box-align: baseline;
      -ms-flex-align: baseline;
          align-items: baseline;
  cursor: pointer;
}

.article_container {
  border-top: 1px solid var(--grey_line);
  border-bottom: 1px solid var(--grey_line);
}

.suggestion_form {
  background-color: var(--blue_bg);
  padding: 40px 70px;
}

.suggestion_form .mask {
  width: 40%;
}

.suggestion_form .form {
  width: 52%;
}

.suggestion_form .btn_normal {
  padding: 12px;
}

.project_tabs .nav-tabs {
  border: none;
}

.project_tabs .nav-tabs > li > a {
  font-size: 32px;
  line-height: 54px;
  border: none;
}

.project_tabs .nav-tabs > li.active > a,
.project_tabs .nav-tabs > li.active > a:focus,
.project_tabs .nav-tabs > li.active > a:hover,
.project_tabs .nav-tabs li > a:hover {
  color: var(--yellow);
  border: none;
  border-bottom: 1px solid var(--yellow);
  background-color: transparent;
}

.project_tabs .projects,
.case_study.projects {
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
}

.project_tabs .projects .project_1,
.project_tabs .projects .project_2,
.case_study.projects .project_1,
.case_study.projects .project_2 {
  width: 47%;
}

@media only screen and (max-width: 900px) {
  .width_100, .content_6 .border_curved, .suggestion_form .mask,
  .suggestion_form .form {
    width: 100% !important;
  }
  .btn_normal {
    width: 138px;
    padding: 12px;
  }
  .btn_inverted {
    width: 152px;
    padding: 12px;
  }
  .div_title {
    font-size: 36px;
    line-height: 48px;
  }
  .text_sm {
    font-size: 22px;
    line-height: 34px;
  }
  .large_text {
    font-size: 62px;
    line-height: 52px;
  }
  /* sm : small devices */
  .mt_75.sm {
    margin-top: 25px;
  }
  .wrapper-sm {
    -ms-flex-wrap: wrap;
        flex-wrap: wrap;
  }
  .header .navbar {
    -webkit-box-pack: start;
        -ms-flex-pack: start;
            justify-content: flex-start;
  }
  .header .navbar-header.flexbox_container {
    -webkit-box-orient: horizontal;
    -webkit-box-direction: reverse;
        -ms-flex-direction: row-reverse;
            flex-direction: row-reverse;
    -webkit-box-flex: unset;
        -ms-flex: unset;
            flex: unset;
  }
  .header .description_container {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }
  .content_1 {
    padding: 30px;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }
  .content_1 .content_1_right.flexbox_container .projects_reviews {
    -ms-flex-wrap: wrap;
        flex-wrap: wrap;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    margin-top: 10px;
  }
  .content_1 .content_1_right.flexbox_container .projects_reviews .positive_review {
    margin-left: 0;
  }
  .content_2 .projects.flexbox_container {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }
  .content_4 {
    padding: 30px;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }
  .content_4 .btn_container {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }
  .content_4 .btn_container .btn_inverted {
    margin-top: 10px;
    margin-left: unset !important;
  }
  .content_6 {
    padding: 30px 20px 30px 20px;
  }
  .content_6 .testimonials.flexbox_container {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }
  .content_6 .testimonial2 {
    margin-top: 20px;
  }
  .content_6 .text-white.fs_48, .content_6 .text-white.div_title,
  .content_6 .text-white.text_sm {
    font-size: 24px;
    line-height: 36px;
  }
  .content_6 .border_curved {
    padding: 15px;
    height: auto;
  }
  .content_6 .border_curved > p:first-child {
    height: auto;
  }
  .content_6 .border_curved .profile {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }
  .content_6 .border_curved .profile .positive_review {
    margin-top: 10px;
  }
  .content_6 .carousel-inner .item {
    height: auto;
    padding: 5px;
  }
  .footer {
    -ms-flex-wrap: wrap;
        flex-wrap: wrap;
  }
  .footer .fs_36 {
    font-size: 25px;
  }
  .footer .social_icons {
    width: 50%;
  }
  .our_team .team_users {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }
  .suggestion_form {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    padding: 20px 20px;
  }
  .project_tabs .nav-tabs > li > a {
    font-size: 14px;
    line-height: 36px;
  }
  .project_tabs .projects .project_1 h3,
  .project_tabs .projects .project_2 h3,
  .case_study.projects .project_1 h3,
  .case_study.projects .project_2 h3 {
    font-size: 20px;
  }
  .project_tabs .projects .project_1 h4,
  .project_tabs .projects .project_2 h4,
  .case_study.projects .project_1 h4,
  .case_study.projects .project_2 h4 {
    font-size: 14px;
  }
}
/*# sourceMappingURL=style.css.map */

